# 2019-ETH-ApproximatingDOGs

./: .gitignore  README.md
code/: CMakeLists.txt  README.md
code/__project-config-WIN/: ## current project properties.txt  mkl settings.txt  pardiso settings.txt
code/build-Win_x64/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  ApproximatingWithDOGs.sln  ApproximatingWithDOGs_bin.vcxproj  ApproximatingWithDOGs_bin.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  tinyxml2.vcxproj  tinyxml2.vcxproj.filters
code/build-Win_x64/glad/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  cmake_install.cmake  glad.sln  glad.vcxproj  glad.vcxproj.filters
code/build-Win_x64/glfw/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  GLFW.sln  cmake_install.cmake
code/build-Win_x64/glfw/src/: cmake_install.cmake  glfw.vcxproj  glfw.vcxproj.filters  glfw3.pc
code/build-Win_x64/imgui/: cmake_install.cmake  imgui.vcxproj  imgui.vcxproj.filters
code/dependencies/fitpack/: GitHub - jbaayen-fitpackpp- C++ binding for FITPACK B-spline curve and surface fitting routines.url
code/dependencies/fitpack/binaries_win_x64/Debug/: fitpack.lib  fitpackpp.lib
code/dependencies/fitpack/binaries_win_x64/MinSizeRel/: fitpack.lib  fitpackpp.lib
code/dependencies/fitpack/binaries_win_x64/RelWithDebInfo/: fitpack.lib  fitpackpp.lib
code/dependencies/pardiso-win/: -Exp Files as Linker Input - Microsoft Docs.url  licence-info (expired 2019_05) .txt  licence-info (expires 2020_07).txt  licence-info (expires 2021_08).txt  pardiso.lic
code/src/: ApplicationController.cpp  ApplicationController.h  config.txt  config__backup.txt  main.cpp  main__backup.cpp
code/src/Constraints/: PositionConstraintsModel.cpp  PositionConstraintsModel.h
code/src/Constraints/Helper/: CoordinateConverter.h  CurveInterpolation.cpp  CurveInterpolation.h
code/src/Constraints/UpdateStrategies/: ConstraintsStrategy.h  CoverTargetConstraints.cpp  CoverTargetConstraints.h  CurveInterpolationConstraints.cpp  CurveInterpolationConstraints.h  GrowTargetConstraints.cpp  GrowTargetConstraints.h
code/src/Geodesics/: ClusteredGeodesicsController.cpp  ClusteredGeodesicsController.h  FeatureGeodesics.cpp  FeatureGeodesics.h  FeatureGeodesicsController.cpp  FeatureGeodesicsController.h  GeodesicCandidates.h  GeodesicFeatureConfig.h  GeodesicWalker.cpp  GeodesicWalker.h  GeodesicsController.h  GeodesicsDirection.h  MeritSelector.cpp  MeritSelector.h  RuledGeodesicsController.cpp  RuledGeodesicsController.h  WalkedData.h  WalkingGeodesics.h
code/src/Geodesics/StoppingCriteria/: GeodesicsStopping.h  LengthGeodesicsStopping.h  NormalDeviationStopping.cpp  NormalDeviationStopping.h
code/src/Helper/: ConfigParser.cpp  ConfigParser.h  CreaseFinder.cpp  CreaseFinder.h  CurveHelper.cpp  CurveHelper.h  GraphCut.cpp  GraphCut.h  LinearTransformations.h  Logger.h  MeanCluster.cpp  MeanCluster.h  MeshLabelling.cpp  MeshLabelling.h  NormalsHelper.cpp  NormalsHelper.h  Serializer.cpp  Serializer.h  TempUtils.cpp  TempUtils.h  Utils.cpp  Utils.h
code/src/Initialization/: GeodesicSurfacesController.cpp  GeodesicSurfacesController.h
code/src/Mesh/: Edge.h  MeshController.cpp  MeshController.h  MeshModel.cpp  MeshModel.h  PairingModes.h  Quad.cpp  Quad.h
code/src/Metrics/: Coverage.cpp  Coverage.h  GaussianCurvature.cpp  GaussianCurvature.h  SurfaceFeatures.cpp  SurfaceFeatures.h
code/src/Model/: ApproximationState.h  DataModel.h  Geodesic.h  GeodesicsModel.cpp  GeodesicsModel.h  GlobalSettings.h  OptimizationSettings.h  PatchModel.cpp  PatchModel.h  RuledSurfacesModel.cpp  RuledSurfacesModel.h
code/src/Optimization/: OptimizationController.cpp  OptimizationController.h
code/src/Optimization/Constraints/: AngleDeficitConstraints.h  BarycentricPositionalConstraints.cpp  BarycentricPositionalConstraints.h  DogConstraints.cpp  DogConstraints.h  LengthRegularizerConstraints.cpp  LengthRegularizerConstraints.h  PointPairConstraints.h  PositionalConstraints.h
code/src/Optimization/Objective/: CompositeObjective.h  IsometryObjective.cpp  IsometryObjective.h  LaplacianObjective.h  Objective.h  ProximityObjective.h  QuadraticConstraintsSumObjective.h  SimplifiedBendingObjective.cpp  SimplifiedBendingObjective.h
code/src/Optimization/Solver/: EqSQP.cpp  EqSQP.h  Newton.h  NewtonKKT.cpp  NewtonKKT.h  PardisoSolver.cpp  line_search.cpp
code/src/Result/: DevelopableModel.h  DevelopableOptimizationSettings.h  DevelopableResultController.cpp  DevelopableResultController.h
code/src/Rulings/: AnalyticRulings.cpp  AnalyticRulings.h  CompoundRulings.cpp  CompoundRulings.h  DiscreteRulings.cpp  DiscreteRulings.h  RuledDevelopableSurface.cpp  RuledDevelopableSurface.h  Rulings.cpp  Rulings.h  Spline.cpp  Spline.h
code/src/View/: InteractiveSegmentSelector.cpp  InteractiveSegmentSelector.h  MenuUpdater.cpp  MenuUpdater.h  MeshViewer.cpp  MeshViewer.h  ResultViewer.cpp  ResultViewer.h  View.cpp  View.h  ViewModel.cpp  ViewModel.h  ViewUpdater.cpp  ViewUpdater.h  ViewUtils.cpp  ViewUtils.h
code/src/View/Model/: MeshViewSettings.h  MeshVisualization.h  ViewModes.h
code/src/View/Utils/: Colors.cpp  Colors.h
code/src/_configurations/: config_model__bumpy-cube.txt  config_model__bumpy-side-irregular.txt  config_model__bumpy-side_random-experiements.txt  config_model__cone_random-experiment.txt  config_model__dog.txt  config_model__dome_for-input-storing.txt  config_model__empty.txt  config_model__face.txt  config_model__lilium_random-experiment.txt  config_model__masonry_random-experiment.txt  config_model__pavilion_failure-case.txt
external code/Non-linear projection optimization (PH)/Stitching2_PH-original/: CMakeLists.txt
external code/Non-linear projection optimization (PH)/Stitching2_PH-original/src/: DogSet.cpp  DogSet.hpp  ProcessSeams.cpp  ProcessSeams.hpp  main.cpp  objectices.cpp  objectives.hpp
external code/StitchAndFlattenResults/: CMakeLists.txt  MeshCutting.cpp  Utils.cpp  Utils.h  config.txt  main.cpp  main_original.cpp  submesh_bnd_to_svg.py
paper/: 00-abstract.tex  03-method.tex  (+12 more)
(+55 files in other folders)
